@@ -1,3 +1,4 @@
+Touch screen support: scrolling
 Better radio stations
 YouTube playlists
 Support for multiple streams
@@ -10,7 +11,6 @@ Filters:
 	Add audio "Tempo" and LADSPA/LV2 filters
 
 HWAccel: DXVA2
-Basic touch screen support
 Users can resume downloading
 Users can introduce aspect ratio and zoom
 
