@@ -63,6 +63,7 @@ private:
 
 	void resizeEvent( QResizeEvent * );
 	void paintEvent( QPaintEvent * );
+	bool event( QEvent * );
 
 	QPaintEngine *paintEngine() const
 	{
