@@ -13,6 +13,7 @@ public:
 private:
 	void resizeEvent( QResizeEvent * );
 	void paintEvent( QPaintEvent * );
+	bool event( QEvent * );
 
 	QPaintEngine *paintEngine() const
 	{
